// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`moveTo 1`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": "volvox",
      "end": 801,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "{volvox}ctgA:2..801",
      "offsetPx": 1,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 1000,
        "refName": "ctgA",
        "reversed": false,
        "start": 0,
      },
      "refName": "ctgA",
      "reversed": false,
      "start": 1,
      "widthPx": 800,
    },
  ],
}
`;

exports[`moveTo 2`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": "volvox",
      "end": 601,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "{volvox}ctgA:402..601",
      "offsetPx": 1604,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 1000,
        "refName": "ctgA",
        "reversed": false,
        "start": 0,
      },
      "refName": "ctgA",
      "reversed": false,
      "start": 401,
      "widthPx": 800,
    },
  ],
}
`;

exports[`setBpPerPx 1`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": "volvox",
      "end": 801,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "{volvox}ctgA:2..801",
      "offsetPx": 1,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 1000,
        "refName": "ctgA",
        "reversed": false,
        "start": 0,
      },
      "refName": "ctgA",
      "reversed": false,
      "start": 1,
      "widthPx": 800,
    },
  ],
}
`;

exports[`setBpPerPx 2`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": "volvox",
      "end": 1000,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": true,
      "key": "{volvox}ctgA:11..1000",
      "offsetPx": 1,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 1000,
        "refName": "ctgA",
        "reversed": false,
        "start": 0,
      },
      "refName": "ctgA",
      "reversed": false,
      "start": 10,
      "widthPx": 99,
    },
    ContentBlock {
      "assemblyName": "volvox",
      "end": 1000,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "{volvox}ctgB:1..1000",
      "offsetPx": 100,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 1000,
        "refName": "ctgB",
        "reversed": false,
        "start": 0,
      },
      "refName": "ctgB",
      "reversed": false,
      "start": 0,
      "widthPx": 100,
    },
  ],
}
`;
